# my_shop

./: .env_example  .gitignore  pyproject.toml
backend/: abstarct_models.py  manage.py
backend/config/: urls.py
backend/config/settings/: __init__.py  base.py  database.py  drf.py  image_resize.py  logging.py
backend/pages/: models.py
