[tool.poetry]
name = "my-shop"
version = "0.1.0"
description = ""
authors = ["slava <odinarovdeveloper@gmail.com>"]
readme = "README.md"
packages = [{include = "my_shop"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.2"
djangorestframework = "^3.14.0"
django-filter = "^23.2"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
django-resized = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
